--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,20 @@
             <version>RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
+
+
+
         <!-- Servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -70,6 +84,13 @@
             <version>2.1.1</version>
         </dependency>
 
+
+        <!-- Jackson -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
 
 
         <!-- Hibernate (DB) -->
